# orientation-project-python-23.SUM.B.1

./: .gitignore  Dockerfile  README.md  app.py  crud.py  database_model.py  database_script.py  main.py  models.py  pyproject.toml  resume.db  seed_database.py  test_pytest.py  utils.py
.github/workflows/: pylint.yml  pyright.yml  pytest.yml
app/: __init__.py
app/config/: __init__.py
app/data/: __init__.py
app/routes/: __init__.py  check_spelling.py  test.py  user.py
app/routes/resume/: all_education.py  education.py  experience.py  skill.py
app/schemas/: __init__.py
app/utils/: __init__.py
data/: education.json  experience.json  skills.json  user.json
instance/: resume
tests/: test_pytest.py
