[tool.pylint.format]
good-names = [
    'x', 'y', 'z', 'id', 'ok'
]

[tool.pylint.messages_control]
disable = [
    'missing-module-docstring',
    'no-name-in-module',
    'useless-import-alias',
    'line-too-long',
    'too-many-arguments',
    'too-few-public-methods'
]

[tool.pyright]
stubPath = 'app/typings'
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false

[tool.poetry]
name = "orientation-project-python-23-sum-b"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
langchain = "^0.0.214"
phonenumbers = "^8.13.15"
flask-sqlalchemy = "^3.0.5"
symspellpy = "^6.7.7"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pylint = "^2.17.4"
pyright = "^1.1.315"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
